Enable all kernels to control hue lights
