# PluginServices/LightService/Controllers/LightController.cs
@@ -1,17 +1,18 @@
-using PartyPlanning.Agents.PartyPlanning.Agents.Shared.Serializers;
 using Microsoft.AspNetCore.Mvc;
-using MongoDB.Driver;
-using LightService.Models;
-using MongoDB.Bson;
+using PartyPlanning.PluginServices.LightService.Models;
+using Q42.HueApi;
+using Q42.HueApi.ColorConverters;
+using Q42.HueApi.ColorConverters.HSB;
+using Q42.HueApi.ColorConverters.Original;
 
-namespace LightService.Controllers
+namespace PartyPlanning.PluginServices.LightService.Controllers
 {
     [ApiController]
     [Route("[controller]")]
-    public class LightController(IMongoDatabase database) : ControllerBase
+    public class LightController(LocalHueClient client) : ControllerBase
     {
-        private readonly IMongoCollection<BsonDocument> _smartDevices = database.GetCollection<BsonDocument>("SmartDevices");
-        private readonly IMongoCollection<Light> _lights = database.GetCollection<Light>("Lights");
+        // private readonly IMongoCollection<BsonDocument> _smartDevices = database.GetCollection<BsonDocument>("SmartDevices");
+        // private readonly IMongoCollection<Light> _lights = database.GetCollection<Light>("Lights");
         private const int LatencyBuffer = 300; // milliseconds
 
         /// <summary>
@@ -19,33 +20,23 @@ namespace LightService.Controllers
         /// </summary>
         /// <returns>Returns the current state of the light and its 6 character long ID for other API requests</returns>
         [HttpGet(Name="get_all_lights")]
-        public IActionResult GetLights()
+        public async Task<IActionResult> GetLightsAsync()
         {
-            // Fetch information about all devices of type "Light"
-            var smartDevices = _smartDevices
-                .Find(new BsonDocument { { "Type", "Light" } })
-                .ToList();
+            // Get the list of lights from the bridge
+            var lights = await client.GetLightsAsync().ConfigureAwait(false);
 
-            var deviceIds = smartDevices.Select(doc => doc["_id"].AsString).ToList();
 
-            // Retrieve additional light-specific data
-            var lights = _lights
-                .Find(Builders<Light>.Filter.In(d => d.Id, deviceIds))
-                .ToList();
-
-            // Combine data from SmartDevices and Lights collections
-            var combinedLights = lights.Select(light =>
-            {
-                var smartDevice = smartDevices.FirstOrDefault(sd => sd["_id"] == light.Id);
-                if (smartDevice != null)
-                {
-                    light.Name = smartDevice["Name"].AsString;
-                    light.Type = smartDevice["Type"].AsString;
-                }
-                return light;
-            }).ToList();
-
-            return Ok(combinedLights);
+            // Return the list of light IDs
+            return Ok(lights.Select(light => {
+                HSB color = new(light.State.Hue!.Value, light.State.Saturation!.Value, light.State.Brightness);
+                return new LightStateModel() {
+                    Id = "xyz"+light.Id,
+                    Name = light.Name,
+                    On = light.State.On,
+                    Brightness = light.State.Brightness,
+                    HexColor = color.GetRGB().ToHex()
+                };
+            }));
         }
 
         /// <summary>
@@ -54,85 +45,63 @@ namespace LightService.Controllers
         /// <param name="id">The ID of the light from the get_all_lights tool.</param>
         /// <returns>The requested light or a 404 error if not found.</returns>
         [HttpGet("{id}", Name="get_light")]
-        public IActionResult GetLight(string id)
+        public async Task<IActionResult> GetLightAsync(string id)
         {
-            // Fetch base device information to ensure it's a light device
-            var smartDevice = _smartDevices
-                .Find(Builders<BsonDocument>.Filter.And(
-                    Builders<BsonDocument>.Filter.Eq("_id", id),
-                    Builders<BsonDocument>.Filter.Eq("Type", "Light")))
-                .FirstOrDefault();
-
-            if (smartDevice == null)
-            {
-                return NotFound();
-            }
-
-            // Fetch the corresponding light-specific data
-            var light = _lights.Find(d => d.Id == id).FirstOrDefault();
-            if (light == null)
-            {
-                return NotFound();
-            }
-
-            light.Name = smartDevice["Name"].AsString;
-            light.Type = smartDevice["Type"].AsString;
-
-            return Ok(light);
+            // Get the state of the light with the specified ID
+            var light = await client.GetLightAsync(id).ConfigureAwait(false);
+            HSB color = new(light!.State.Hue!.Value, light.State.Saturation!.Value, light.State.Brightness);
+            
+            return Ok(new LightStateModel() {
+                Id = light.Id,
+                Name = light.Name,
+                On = light.State.On,
+                Brightness = light.State.Brightness,
+                HexColor = color.GetRGB().ToHex()
+            });
         }
 
         /// <summary>
         /// Changes the state of a light.
         /// </summary>
         /// <param name="id">The ID of the light to change from the get_all_lights tool.</param>
-        /// <param name="newStateRequest">The new state of the light.</param>
+        /// <param name="changeStateRequest">The new state of the light and change parameters.</param>
         /// <returns>The updated light or a 404 error if not found.</returns>
         [HttpPost("{id}", Name="change_light_state")]
-        public IActionResult ChangeLightState(string id, ChangeSpeakerStateRequest newStateRequest)
+        public async Task<IActionResult> ChangeLightStateAsync(string id, ChangeStateRequest changeStateRequest)
         {
-            // Fetch base device information to ensure it's a light device
-            var smartDevice = _smartDevices
-                .Find(Builders<BsonDocument>.Filter.And(
-                    Builders<BsonDocument>.Filter.Eq("_id", id),
-                    Builders<BsonDocument>.Filter.Eq("Type", "Light")))
-                .FirstOrDefault();
+            // Get the state of the light with the specified ID
+            var light = await client.GetLightAsync(id).ConfigureAwait(false);
 
-            if (smartDevice == null)
-            {
-                return NotFound();
-            }
-
-            // Fetch the corresponding light-specific data
-            var light = _lights.Find(d => d.Id == id).FirstOrDefault();
             if (light == null)
             {
-                return NotFound();
+                return null;
             }
 
-            DateTime scheduledTime = newStateRequest.ScheduledTime.AddMilliseconds(LatencyBuffer);
-            if (scheduledTime > DateTime.Now)
+
+            if (changeStateRequest.HexColor != null)
             {
-                var timer = new Timer(
-                    _ => light.ChangeState(
-                        newStateRequest.IsOn,
-                        newStateRequest.HexColor,
-                        newStateRequest.Brightness,
-                        newStateRequest.FadeDurationInMilliseconds),
-                    null,
-                    scheduledTime - DateTime.Now,
-                    TimeSpan.FromMilliseconds(-1));
-            }
-            else
+                RGBColor? rGBColor = new(changeStateRequest.HexColor);
+
+                // Send the updated state to the light
+                await client.SendCommandAsync(new LightCommand
+                {
+                    On = changeStateRequest.IsOn ?? light.State.On,
+                    Brightness = changeStateRequest.Brightness ?? light.State.Brightness,
+                    Hue = (int?)rGBColor?.GetHue(),
+                    Saturation = (int?)rGBColor?.GetSaturation()
+                }, [id]).ConfigureAwait(false);
+            } else
             {
-                light.ChangeState(
-                    newStateRequest.IsOn,
-                    newStateRequest.HexColor,
-                    newStateRequest.Brightness,
-                    newStateRequest.FadeDurationInMilliseconds);
+                // Send the updated state to the light
+                await client.SendCommandAsync(new LightCommand
+                {
+                    On = changeStateRequest.IsOn ?? light.State.On,
+                    Brightness = changeStateRequest.Brightness ?? light.State.Brightness
+                }, [id]).ConfigureAwait(false);
             }
 
-            _lights.ReplaceOne(d => d.Id == light.Id, light);
-            return Ok(light);
+            // Return the updated state of the light
+            return await GetLightAsync(id);
         }
     }
 }
