# Plugins/OpenApiPlugins/LightPlugin.swagger.json
@@ -63,21 +63,21 @@
                     }
                 ],
                 "requestBody": {
-                    "description": "The new state of the light.",
+                    "description": "The new state of the light and change parameters.",
                     "content": {
                         "application/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/ChangeSpeakerStateRequest"
+                                "$ref": "#/components/schemas/ChangeStateRequest"
                             }
                         },
                         "text/json": {
                             "schema": {
-                                "$ref": "#/components/schemas/ChangeSpeakerStateRequest"
+                                "$ref": "#/components/schemas/ChangeStateRequest"
                             }
                         },
                         "application/*+json": {
                             "schema": {
-                                "$ref": "#/components/schemas/ChangeSpeakerStateRequest"
+                                "$ref": "#/components/schemas/ChangeStateRequest"
                             }
                         }
                     }
@@ -92,12 +92,13 @@
     },
     "components": {
         "schemas": {
-            "ChangeSpeakerStateRequest": {
+            "ChangeStateRequest": {
                 "type": "object",
                 "properties": {
                     "isOn": {
                         "type": "boolean",
-                        "description": "Specifies whether the light is turned on or off."
+                        "description": "Specifies whether the light is turned on or off.",
+                        "nullable": true
                     },
                     "hexColor": {
                         "type": "string",
@@ -105,23 +106,22 @@
                         "nullable": true
                     },
                     "brightness": {
-                        "enum": [
-                            "Low",
-                            "Medium",
-                            "High"
-                        ],
-                        "type": "string",
-                        "description": "The brightness level of the light."
+                        "type": "integer",
+                        "description": "The brightness level of the light.",
+                        "format": "int32",
+                        "nullable": true
                     },
                     "fadeDurationInMilliseconds": {
                         "type": "integer",
                         "description": "Duration for the light to fade to the new state, in milliseconds.",
-                        "format": "int32"
+                        "format": "int32",
+                        "nullable": true
                     },
                     "scheduledTime": {
                         "type": "string",
                         "description": "The time at which the change should occur.",
-                        "format": "date-time"
+                        "format": "date-time",
+                        "nullable": true
                     }
                 },
                 "additionalProperties": false,
